syntax = "proto3";
package proto;
option java_package = "cyan.simple.protobuf.model.proto";
option java_outer_classname = "TeacherProto";


message TeachersMessage{
    repeated TeacherMessage teachers = 1;
}

message TeacherMessage{
    // 姓名
    string name = 1;
    // 年龄
    int32 age = 2;
    // 性别
    string sex = 3;
    // 学科
    string subject = 4;
}